fix swagger success and error message example.
