# OrderApi/docs/swagger.json
@@ -50,7 +50,7 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/controllers.ErrorH"
                         }
                     },
                     "500": {
@@ -94,7 +94,7 @@
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/controllers.ErrorH"
                         }
                     },
                     "500": {
@@ -136,19 +136,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/controllers.SuccessH"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/controllers.ErrorH"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/controllers.ErrorH"
                         }
                     },
                     "500": {
@@ -181,16 +181,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/controllers.SuccessH"
                         }
                     },
                     "400": {
-                        "description": "Bad Request"
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.ErrorH"
+                        }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/controllers.ErrorH"
                         }
                     },
                     "500": {
@@ -201,6 +204,24 @@
         }
     },
     "definitions": {
+        "controllers.ErrorH": {
+            "type": "object",
+            "properties": {
+                "error_message": {
+                    "type": "string",
+                    "example": "The error is explained here."
+                }
+            }
+        },
+        "controllers.SuccessH": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "Operation successfull."
+                }
+            }
+        },
         "models.Item": {
             "type": "object",
             "properties": {
